--- a/app/views/application/rules.html.erb
+++ b/app/views/application/rules.html.erb
@@ -3,9 +3,18 @@
 
     <h1>House Rules</h1>
 
-    <ul>
-      <li>Stuff</li>
-    </ul>
+    <p class="big">All modders on the site must abide by these rules. Violations will be met with a warning, suspension, or ban at the discretion of the DOL-003.info team.</p>
+    <p>The DOL-003.info team also reserves the right to notify admins of related communities of violations in the interest of keeping the GCC scene safe and inclusive for everyone. Likewise, inappropriate behavior in other spaces (online or in-person) will also be held to these standards for the purposes of membership, and the DOL-003.info team reserves the right to act on reliably-sourced information from related communities as they deem appropriate.</p>
+
+    <ol>
+      <li>No objectionable content allowed, whether in images, text or links. This includes anything the DOL-003.info team deems to promote or be associated with racism, sexism, violence, harassment, etc.</li>
+      <li>No NSFW content allowed, whether in images, text, or links. This includes sexual content, nudity, etc.</li>
+      <li>No political content allowed, whether in images, text or links.</li>
+      <li>A modder may not have more than one account or profile, unless they represent demonstrably distinct entities.</li>
+      <li>Absolutely no impersonation of another modder, even in jest.</li>
+      <li>Modders may not purposefully misrepresent their location, experience, services available, or any other information about themselves.</li>
+      <li>Modders may not upload photos of work that is not their own.</li>
+    </ol>
 
   </div>
 </div>
