--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -142,6 +142,19 @@
 
     </div>
 
+    <div class="span-4 caption">
+      <%= form.label :status, 'Profile status', class: 'label large' %>
+      <p class="small">Inactive profiles will not show up in search results or be visible to anyone but you.</p>
+    </div>
+
+    <div class="span-8 input-container">
+      <div class="field">
+        <div class="select-input-container">
+          <%= form.select :status, Modder::STATUS_OPTIONS, {}, { class: 'select-input' } %>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="content">
