--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -6,6 +6,7 @@ body.modders {
       display: flex;
 
       .logo {
+        flex: none;
         margin: 0;
         width: 64px;
         height: 64px;
