--- a/app/views/application/rules.html.erb
+++ b/app/views/application/rules.html.erb
@@ -3,18 +3,23 @@
 
     <h1>House Rules</h1>
 
-    <p class="big">All modders on the site must abide by these rules. Violations will be met with a warning, suspension, or ban at the discretion of the DOL-003.info team.</p>
-    <p>The DOL-003.info team also reserves the right to notify admins of related communities of violations in the interest of keeping the GCC scene safe and inclusive for everyone. Likewise, inappropriate behavior in other spaces (online or in-person) will also be held to these standards for the purposes of membership, and the DOL-003.info team reserves the right to act on reliably-sourced information from related communities as they deem appropriate.</p>
+    <p class="big">All modders registered on DOL-003.info must abide by these rules. Violations will be met with a warning, suspension, or ban at the discretion of the DOL-003.info team (aka "the admins").</p>
+    <p>The admins also reserve the right to notify admins of related communities about any violations in the interest of keeping these communities safe and inclusive for everyone. Likewise, modder behavior in other spaces (online or in-person) will also be held to these standards for the purposes of membership, and the admins reserve the right to act on reliably-sourced information from related communities as they deem appropriate.</p>
+    <p>Modders also agree to any future versions of these rules. Revisions will be announced via email, and modders will have 2 weeks to review and either comply or deactivate their profile.</p>
 
     <ol>
-      <li>No objectionable content allowed, whether in images, text or links. This includes anything the DOL-003.info team deems to promote or be associated with racism, sexism, violence, harassment, etc.</li>
+      <li>No objectionable content allowed, whether in images, text or links. This includes anything the admins deem to promote or be associated with racism, sexism, violence, harassment, etc.</li>
       <li>No NSFW content allowed, whether in images, text, or links. This includes sexual content, nudity, etc.</li>
       <li>No political content allowed, whether in images, text or links.</li>
       <li>A modder may not have more than one account or profile, unless they represent demonstrably distinct entities.</li>
       <li>Absolutely no impersonation of another modder, even in jest.</li>
-      <li>Modders may not purposefully misrepresent their location, experience, services available, or any other information about themselves.</li>
       <li>Modders may not upload photos of work that is not their own.</li>
+      <li>Modders may not purposefully misrepresent their location, experience, services available, or any other information about themselves.</li>
+      <li>Anyone determined to have routinely failed to deliver paid-for work is subject to removal with or without notice by the admins.</li>
+      <li>No content that is unrelated to GCCs or related controllers is allowed. Ask in Discord if you’re not sure.</p>
     </ol>
+
+    <p>If you notice a violation of these rules, please DM an admin <%= link_to 'on Discord', 'https://discord.gg/HwtPU7tkCT', target: '_blank' %> so we can investigate.</p>
 
   </div>
 </div>
