--- a/app/views/application/privacy_policy.html.erb
+++ b/app/views/application/privacy_policy.html.erb
@@ -3,7 +3,36 @@
 
     <h1>Privacy Policy</h1>
 
-    <p>Coming soon</p>
+    <p>Updated: January 2023</p>
+
+    <p class="big">DOL-003.info very selectively collects and stores personal data to enable the features offered on this website. This document explains what data we collect, how we store it, and how we use it.</p>
+
+    <p>Personal data is data by which you can be identified, either by itself or with other data. We are committed to collecting as little personal data as possible to enable us to effectively run this website, and also to keeping your personal data safe.</p>
+
+    <h2>Personal data collected</h2>
+    <p>By accessing this website, you provide your IP address to our servers.</p>
+    <p>To create a user account on this website, you must provide a valid email address and choose a password.</p>
+    <p>To create a modder profile, you must provide your “modder name,” approximate location, a link to a website or social media presence, and optionally a brief “bio” describing yourself as a modder, the services you provide, and a user-uploaded logo.</p>
+
+    <h2>Use of personal data</h2>
+    <p>We may use the personal data you provide without restriction to provide the features offered on this website; to respond to service and/or security issues; to detect or prevent technicaly issues or fraud or other abuses of our systems; to improve the features offered on this website; to provide aggregated analysis to our users; and as required by law.</p>
+    <p>Primarily, we use the data you enter to power the primary feature of the website: Allowing users to accurately find nearby modders offering certain services. We use your email address and password to keep your account secure.</p>
+
+    <h2>Security of personal data</h2>
+    <p>We commit to maintaining reasonable technical safeguards to protect the personal data that you provide. All data is stored in a manner compliant with state-of-the-art cybersecurity practices. Passwords are hashed using an advanced algorithm and are therefore not viewable or recoverable even by us. All data is transmitted between your browser and our servers using Secure Socket Layers (SSL), the industry standard for protecting your information while in transit.</p>
+
+    <h2>Sharing of personal data</h2>
+    <p>We do not share personal data with third parties beyond what is publicly visible on the website. We may allow third parties to provide analytics services on the website, but will never provide personal data beyond your IP address to such parties.</p>
+
+    <h2>Cookies</h2>
+    <p>Cookies are small text files stored internally within your browser by websites you visit, including DOL-003.info. We use cookies and similar technology to authenticate users and remember your preferences.</p>
+    <p>We may also allow third parties to provide services such as analytics, advertising, geolocation, etc. on our website. Each of these services may use cookies to power or enhance their functionality, such as by identifying or remembering user identity or preferences across multiple integration points of the given service.</p>
+
+    <h2>User rights</h2>
+    <p>We believe you own your personal data, and that you have the right to view, modify or remove your data from our services upon request. All personal data explicitly named in this Privacy Policy is viewable and editable at any time by signing in to your account. If you would like to request permanent deletion of your personal data from our servers, please contact us.</p>
+
+    <h2>Policy updates</h2>
+    <p>We may update this Privacy Policy in the future. When this happens, we will notify all registered users of this site via email, and give you an opportunity to review the changes before deciding whether to continue using this website.</p>
 
   </div>
 </div>
