--- a/app/views/application/rules.html.erb
+++ b/app/views/application/rules.html.erb
@@ -3,7 +3,7 @@
 
     <h1>House Rules</h1>
 
-    <p class="big">All modders registered on DOL-003.info must abide by these rules. Violations will be met with a warning, suspension, or ban at the discretion of the DOL-003.info team (aka "the admins").</p>
+    <p class="big">All modders registered on DOL-003.info must abide by these rules. Violations will be met with a warning, suspension, or ban at the discretion of the DOL-003.info team (aka “the admins”).</p>
     <p>The admins also reserve the right to notify admins of related communities about any violations in the interest of keeping these communities safe and inclusive for everyone. Likewise, modder behavior in other spaces (online or in-person) will also be held to these standards for the purposes of membership, and the admins reserve the right to act on reliably-sourced information from related communities as they deem appropriate.</p>
     <p>Modders also agree to any future versions of these rules. Revisions will be announced via email, and modders will have 2 weeks to review and either comply or deactivate their profile.</p>
 
