--- a/app/views/application/terms.html.erb
+++ b/app/views/application/terms.html.erb
@@ -1,9 +1,41 @@
 <div class="content grid">
   <div class="span-8">
 
-    <h1>Terms of service</h1>
+    <h1>Terms of Service</h1>
 
-    <p>Coming soon</p>
+    <p>Last updated: January 2023</p>
+
+    <p class="big">This website is available for your use solely on the condition that you read, agree to, and abide by the Terms of Service below. By using the website, you signify your agreement in full to be legally bound by all the Terms of Service.</p>
+
+    <h2>General disclaimer and limitation of liability</h2>
+    <p>This website is provided AS IS, with no guarantee or warranty of any kind, express or implied, for any aspect or element of the website. To the full extent permissible by applicable law, we disclaim all warranties of any kind. We do not offer or make any such warranty, including, but not limited to, guarantees of accuracy, noninfringement, availability, accessibility, quiet enjoyment, and so forth.</p>
+    <p>To the maximum extent permitted by law, we will not be liabile for any damages of any kind arising from the use of this website.</p>
+
+    <h2>Limitation of liability regarding user-uploaded content</h2>
+    <p>By uploading a file or other content to this website, you grant us full license to store, modify, display, and distribute said content without restriction; furthermore, you certify your possession of the legal right to grant such a license for the given content. You agree to retain full liability for any damages arising from our use, display, or distribution of said content to the maximum extent permitted by law.</p>
+    <p>You agree to hold us harmless in the case of any damages arising from our use, display or distribution of user-uploaded content, or from your use of said content.</p>
+
+    <h2>License restrictions</h2>
+    <p>We make no representation of granting license for unauthorized use of this website or any content therein. License is not granted to copy, modify, download or redistribute any content from this website.</p>
+
+    <h2>Rules of conduct</h2>
+    <p>All use of this website and all content therein must be in compliance with these Terms of Service and any applicable laws and regulations. License for use of this website is provided exclusively for the intended purposes. We reserve the right to revoke or update this license as our services evolve. We provide no warranty, express or implied, for the continuous availability of any feature or content offered on the site at any given point in time.</p>
+    <p>You may not use this website to do or share anything unlawful, misleading, discriminatory or fraudulent. You may not use this website to infringe on another party’s rights. You may not use this website in a way that is detrimental to the proper functionality of the website or the ability of others to use the website.</p>
+    <p>All registered users of this site are expected to read, agree to, and abide by the <%= link_to 'House Rules', rules_path %>. Violators are subject to temporary or permanent revocation of membership at our discretion.</p>
+    <p>All content uploaded is subject to removal with or without notice if we believe it violates these Terms of Service or if it is required by law. Likewise, all user accounts are subject to suspension or deletion at our discretion if they are related to a violation of these Terms of Service, or if it is required by law.</p>
+    <p>Children 13 years and younger are not authorized to use this website or to register a user account.</p>
+
+    <h2>Privacy Policy</h2>
+    <p>By using this website, you agree in full to <%= link_to 'the DOL-003.info Privacy Policy', privacy_path %>.</p>
+
+    <h2>Jurisdiction</h2>
+    <p>These Terms of Service shall be construed in accordance with the laws of the State of Virginia.</p>
+
+    <h2>Severability</h2>
+    <p>The waiver of any part of these Terms of Service for any reason shall not be considered a waiver of any other provision or element of the Terms of Service. If any part of the Terms of Service is found to be unenforceable for any reason, that part shall be considered severable, and the remainder of the Terms of Service shall remain in full effect.</p>
+
+    <h2>Perpetuity</h2>
+    <p>You agree that we may update these Terms of Service and the documents linked within as necessary in the future, and that you will either agree and comply with the new Terms of Service or promptly discontinue your use of this website after a notice period not to exceed 14 days following the update.</p>
 
   </div>
 </div>
