--- a/app/frontend/footer.scss
+++ b/app/frontend/footer.scss
@@ -1,3 +1,5 @@
+@import "@/breakpoints";
+
 footer {
   background-color: $black;
   color: $platinum;
@@ -6,6 +8,10 @@ footer {
   .sign-in-link {
     display: flex;
     justify-content: flex-end;
+
+    @include small {
+      justify-content: center;
+    }
 
     .button {
       margin-right: -2px;
