--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -40,6 +40,7 @@ header {
           font-size: 14px;
           letter-spacing: 1px;
           font-weight: bold;
+          white-space: nowrap;
         }
 
         + li {
