--- a/app/frontend/components/Geolocator.scss
+++ b/app/frontend/components/Geolocator.scss
@@ -1,3 +1,4 @@
+@import "@/breakpoints";
 @import "@/colors";
 
 .Geolocator {
@@ -10,6 +11,12 @@
     padding: 0;
     display: flex;
     align-items: center;
+
+    span {
+      @include small {
+        display: none;
+      }
+    }
 
     svg {
       width: 16px;
