--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -1,4 +1,5 @@
-@import "../colors";
+@import "@/breakpoints";
+@import "@/colors";
 
 body.modders {
   section.modder-info {
@@ -63,20 +64,8 @@ body.modders {
         flex-flow: row wrap;
         gap: 12px;
 
-        > li {
-          display: flex;
-          align-items: center;
-          margin: 0;
-          padding: 0 16px;
-          height: 32px;
-          font-size: 14px;
-          text-transform: uppercase;
-          font-weight: bold;
-          letter-spacing: 1px;
-          line-height: 1;
-          box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
-          color: var(--service-color, $platinum);
-          border-radius: 32px;
+        @include small {
+          gap: 8px;
         }
       }
     }
@@ -200,16 +189,17 @@ body.modders.index {
 
 body.modders.show {
   section.photos {
-    height: 20vw;
-    min-height: 180px;
-    max-height: 280px;
+    height: 280px;
     position: relative;
+    display: flex;
+    flex-flow: column nowrap;
 
     &.empty:not(.signed-in-modder) {
       display: none;
     }
 
     > .photo-container {
+      flex: none;
       width: 100vw;
       height: 100%;
       display: flex;
@@ -237,6 +227,10 @@ body.modders.show {
     flex-flow: column nowrap;
     align-items: flex-end;
     padding-top: 8px;
+
+    @include small {
+      align-items: center;
+    }
 
     svg {
       width: 16px;
