--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -75,6 +75,10 @@ body.modders {
 body.modders.index {
   .search-fields {
     margin-top: 64px;
+
+    @include small {
+      margin-top: 48px;
+    }
   }
 
   .sidebar {
@@ -82,6 +86,10 @@ body.modders.index {
     padding: 24px 24px 28px;
     background-color: #eee;
     border-radius: 16px;
+
+    @include small {
+      border-radius: 0;
+    }
 
     .ServiceSelector {
       .service-selector__control--menu-is-open,
@@ -113,6 +121,11 @@ body.modders.index {
   section.results {
     padding-left: 48px;
 
+    @include small {
+      padding-left: 0;
+      margin-top: 24px;
+    }
+
     .react-container-ModderMap {
       height: 320px;
       margin-top: -24px;
@@ -122,12 +135,20 @@ body.modders.index {
       opacity: 0;
       visibility: hidden;
       transition: opacity 0.5s ease-in-out, visibility 0s linear 0.5s;
+
+      @include small {
+        margin-top: 0;
+      }
     }
 
     .heading {
       display: flex;
       align-items: flex-end;
       margin-top: -296px;
+
+      @include small {
+        margin-top: -320px;
+      }
 
       button {
         margin-left: auto;
@@ -154,6 +175,10 @@ body.modders.index {
 
       .heading {
         margin-top: 48px;
+
+        @include small {
+          margin-top: 24px;
+        }
 
         button.hide-map {
           display: inline-flex;
