--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <head>
 
     <title><%= page_title %></title>
-    <meta name="description" content="DOL-003.info is a repository of GameCube controller information and a directory of controller modders.">
+    <meta name="description" content="<%= page_description %>">
     <meta property="og:description" content="DOL-003.info is a repository of GameCube controller information and a directory of controller modders.">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
