--- a/app/frontend/service-pill.scss
+++ b/app/frontend/service-pill.scss
@@ -21,7 +21,7 @@
     letter-spacing: 0;
   }
 
-  &:hover {
+  &.interactive:hover {
     color: var(--service-color, $platinum);
     background-color: #fff;
     box-shadow: inset 0 0 0 2px var(--service-color, $platinum),
