--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -9,7 +9,7 @@
 
     <p>This website is completely open-source. Bug reports and contributions are welcome! Find the <a href="https://github.com/jmarquis/controllers" target="_blank">source code on GitHub</a>.</p>
 
-    <p>DOL-003.info is a pro bono project by <a href="https://twitter.com/_jmarquis" target="_blank">Jeremy Marquis</a>, aka Math (math#9000).</p>
+    <p>DOL-003.info is a project by <a href="https://twitter.com/_jmarquis" target="_blank">Jeremy Marquis</a>, aka Math (math#9000).</p>
 
   </div>
 </div>
