--- a/app/views/application/rules.html.erb
+++ b/app/views/application/rules.html.erb
@@ -13,7 +13,7 @@
       <li>No political content allowed, whether in images, text or links.</li>
       <li>A modder may not have more than one account or profile, unless they represent demonstrably distinct entities.</li>
       <li>Absolutely no impersonation of another modder, even in jest.</li>
-      <li>Modders may not upload photos of work that is not their own.</li>
+      <li>Modders may not upload photos of work that is not their own. Featuring parts made by others is acceptable, but the finished work must be your own design.</li>
       <li>Modders may not purposefully misrepresent their location, experience, services available, or any other information about themselves.</li>
       <li>Anyone determined to have routinely failed to deliver paid-for work is subject to removal with or without notice by the admins.</li>
       <li>No content that is unrelated to GCCs or related controllers is allowed. Ask in Discord if you’re not sure.</p>
