--- a/app/views/knowledge_base/show.html.erb
+++ b/app/views/knowledge_base/show.html.erb
@@ -1,5 +1,7 @@
 <div class="content grid">
-  <div class="sidebar span-4"></div>
+  <div class="sidebar span-4">
+    <h3>Knowledge Base</h3>
+  </div>
   <div class="page span-8">
     <h1><%= @title %></h1>
     <% if @description.present? %>
