--- a/app/views/knowledge_base/show.html.erb
+++ b/app/views/knowledge_base/show.html.erb
@@ -1,6 +1,10 @@
 <div class="content grid">
   <div class="sidebar span-4">
     <h3>Knowledge Base</h3>
+
+    <ul>
+      <%= menu_tree @menu %>
+    </ul>
   </div>
   <div class="page span-8">
     <h1><%= @title %></h1>
