--- a/app/views/knowledge_base/_menu_tree.html.erb
+++ b/app/views/knowledge_base/_menu_tree.html.erb
@@ -2,7 +2,14 @@
   <% locals[:tree].each do |item| %>
     <li>
       <%= link_to item[:title], item[:path] %>
-      <%= menu_tree(item[:children], item[:path]) if item[:children].present? %>
+      <% if item[:children].present? %>
+        <input type="checkbox" class="menu-toggle" id="menu-toggle-<%= item[:path] %>">
+        <label for="menu-toggle-<%= item[:path] %>">
+          <%= inline_svg_tag 'plus.svg', class: 'open' %>
+          <%= inline_svg_tag 'minus.svg', class: 'close' %>
+        </label>
+        <%= menu_tree(item[:children], item[:path]) %>
+      <% end %>
     </li>
   <% end %>
 </ul>
