--- a/app/views/knowledge_base/_menu_tree.html.erb
+++ b/app/views/knowledge_base/_menu_tree.html.erb
@@ -1,10 +1,10 @@
 <ul>
   <% locals[:tree].each do |item| %>
-    <li>
-      <%= link_to item[:title], item[:path] %>
+    <li class="<%= 'current' if path_matches?(item[:path], @current_path) %>">
+      <%= link_to item[:title], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
       <% if item[:children].present? %>
-        <input type="checkbox" class="menu-toggle" id="menu-toggle-<%= item[:path] %>">
-        <label for="menu-toggle-<%= item[:path] %>">
+        <%= check_box_tag "menu-toggle-#{item[:path].parameterize}", 'a', path_matches?(item[:path], @current_path) %>
+        <label for="menu-toggle-<%= item[:path].parameterize %>">
           <%= inline_svg_tag 'plus.svg', class: 'open' %>
           <%= inline_svg_tag 'minus.svg', class: 'close' %>
         </label>
