simplify service selector for search

--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -20,7 +20,8 @@
               label: service[:name],
               color: service[:color]
             }
-          }
+          },
+          comma_delimited: true
         }
       %>
     </div>
