--- a/app/frontend/entrypoints/knowledge_base.scss
+++ b/app/frontend/entrypoints/knowledge_base.scss
@@ -80,7 +80,7 @@ body.knowledge_base.show {
 
       li {
         margin: 0;
-        padding: 0;
+        padding: 0 32px 0 0;
         line-height: 1.3;
         position: relative;
 
@@ -126,7 +126,7 @@ body.knowledge_base.show {
         }
 
         ul {
-          margin: 14px 0 20px 4px;
+          margin: 14px -32px 20px 4px;
           padding: 2px 0 0 16px;
           border-left: 2px solid $platinum;
           display: none;
