--- a/app/frontend/entrypoints/knowledge_base.scss
+++ b/app/frontend/entrypoints/knowledge_base.scss
@@ -158,9 +158,44 @@ body.knowledge_base.show {
   section.page {
     padding-left: 48px;
 
+    h2,
+    h3 {
+      position: relative;
+      margin-left: -24px;
+      padding-left: 24px;
+
+      > a {
+        position: absolute;
+        left: -12px;
+        top: 2px;
+        display: flex;
+        padding: 4px;
+        visibility: hidden;
+        color: $platinum;
+
+        &:hover {
+          color: $panasonic;
+        }
+
+        > svg {
+          width: 16px;
+          height: 16px;
+          display: block;
+        }
+      }
+
+      &:hover > a {
+        visibility: visible;
+      }
+    }
+
     @include medium {
       padding-left: 0;
       margin-top: 24px;
     }
+  }
+
+  #link-icon {
+    display: none;
   }
 }
