--- a/app/frontend/entrypoints/application.scss
+++ b/app/frontend/entrypoints/application.scss
@@ -6,6 +6,10 @@ body.application.index {
     padding-top: 0;
   }
 
+  .grid {
+    grid-row-gap: 64px;
+  }
+
   header .logo {
     color: $indigo;
     box-shadow: inset 0 0 0 3px $indigo;
@@ -16,6 +20,10 @@ body.application.index {
     background-size: cover;
     padding: 220px 0 48px;
     margin: -80px 0 64px;
+
+    @include small {
+      padding-top: 140px;
+    }
   }
 
   .service-list {
