--- a/app/frontend/entrypoints/knowledge_base.scss
+++ b/app/frontend/entrypoints/knowledge_base.scss
@@ -93,7 +93,7 @@ body.knowledge_base.show {
         }
 
         label {
-          display: block;
+          display: flex;
           position: absolute;
           top: -2px;
           right: 0;
