--- a/app/frontend/components/LocationSelector.scss
+++ b/app/frontend/components/LocationSelector.scss
@@ -50,6 +50,7 @@
       right: 16px;
       cursor: pointer;
       color: $platinum;
+      display: flex;
 
       &:hover {
         color: $panasonic;
