--- a/app/frontend/entrypoints/knowledge_base.scss
+++ b/app/frontend/entrypoints/knowledge_base.scss
@@ -3,7 +3,7 @@
 
 body.knowledge_base.show {
   .sidebar {
-    background-color: #eee;
+    background-color: $crystal;
     margin: -24px;
     padding: 24px 24px 28px;
     border-radius: 16px;
