--- a/app/frontend/button.scss
+++ b/app/frontend/button.scss
@@ -47,7 +47,7 @@
     }
 
     &:active {
-      background-color: #eee;
+      background-color: $crystal;
       box-shadow: inset 0 0 0 2px $indigo, inset 0 2px 10px -6px $black;
     }
   }
